# piscine-rust

./: module-01.md
my-answers/module00/ex01/: min.rs
my-answers/module00/ex02/: collatz.rs  print_bytes.rs
my-answers/module00/ex03/: fizzbuzz.rs
my-answers/module00/ex04/: Cargo.toml
my-answers/module00/ex04/src/: other.rs  overflow.rs
my-answers/module00/ex05/: Cargo.toml
my-answers/module00/ex05/src/: main.rs
my-answers/module00/ex06/: Cargo.toml
my-answers/module00/ex06/src/: main.rs
my-answers/module00/ex07/: Cargo.toml
my-answers/module00/ex07/src/: lib.rs  main.rs
