[package]
name = "module00-ex04"
edition = "2021"
authors = ["John Doe"]
description = "my answer to the fifth exercise of the first module of 42's Rust Piscine"
publish = false
default-run = "module00-ex04"

[[bin]]
name = "other"
path = "src/other.rs"

[[bin]]
name = "test-overflows"
path = "src/overflow.rs"

[profile.release]
strip = true

[profile.no-overflows]
inherits = "dev"
overflow-checks = false
